Retro compatibility of JWT auth